# mkdocs-exercise

./: 404.html  NOTES.md  README.md  babel.cfg  index.html  pyproject.toml  serve.py  setup.py  test.py
.github/workflows/: ci.yml
docs/: mkdocs.yml
docs/docs/: exercices.md  index.md  other.md
exercices/: index.html
mkdocs_exercises/: plugin.py
mkdocs_exercises/css/: exercise.css
mkdocs_exercises/js/: exercise.js
mkdocs_exercises/locales/es/LC_MESSAGES/: messages.po
mkdocs_exercises/locales/fr/LC_MESSAGES/: messages.po
mkdocs_exercises/templates/: exercise_item.html
mkdocs_plugin_exercises/: plugin.py
mkdocs_plugin_exercises/static/: exercise.js
mkdocs_plugin_exercises/templates/: exercise_item.html
search/: search_index.json
test-checkbox/: test.html
