[tool.poetry]
name = "mkdocs-plugin-exercises"
version = "0.1.0"
description = "Provide Exercises to Mkdocs"
authors = ["Yves Chevallier <yves.chevallier@heig-vd.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymdown-extensions = "^10.8.1"
mkdocs-material = "^9.5.28"


[tool.poetry.group.dev.dependencies]
watchdog = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
