[tool.poetry]
name = "mkdocs-plugin-exercises"
version = "0.1.0"
description = "Provide Exercises to Mkdocs"
authors = ["Yves Chevallier <yves.chevallier@heig-vd.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymdown-extensions = "^10.8.1"
mkdocs-material = "^9.5.28"
mkdocs = "^1.6"

[tool.poetry.group.dev.dependencies]
watchdog = "^4.0.1"
babel = "^2.15.0"

[tool.poetry.classifiers]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.plugins."mkdocs.plugins"]
"exercises" = "mkdocs_exercises.plugin:Exercises"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
